--- a/FileSystem/src/Umbrella.FileSystem.AzureStorage/Umbrella.FileSystem.AzureStorage.csproj
+++ b/FileSystem/src/Umbrella.FileSystem.AzureStorage/Umbrella.FileSystem.AzureStorage.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net46</TargetFramework>
+    <TargetFrameworks>netstandard1.3;net46</TargetFrameworks>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -14,7 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="1.1.2" />
-    <PackageReference Include="WindowsAzure.Storage" Version="8.1.1" />
+    <PackageReference Include="WindowsAzure.Storage" Version="8.1.3" />
   </ItemGroup>
 
   <ItemGroup>
