--- a/DynamicImage/benchmark/Umbrella.DynamicImage.Benchmark/Umbrella.DynamicImage.Benchmark.csproj
+++ b/DynamicImage/benchmark/Umbrella.DynamicImage.Benchmark/Umbrella.DynamicImage.Benchmark.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -21,8 +21,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="BenchmarkDotNet" Version="0.10.6" />
-    <PackageReference Include="Moq" Version="4.7.12" />
+    <PackageReference Include="BenchmarkDotNet" Version="0.10.8" />
+    <PackageReference Include="Moq" Version="4.7.25" />
   </ItemGroup>
 
 </Project>
