--- a/TypeScript/src/Umbrella.TypeScript.Tools/Umbrella.TypeScript.Tools.csproj
+++ b/TypeScript/src/Umbrella.TypeScript.Tools/Umbrella.TypeScript.Tools.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
+<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
   
   <PropertyGroup>
     <AssemblyName>dotnet-umbrella-ts</AssemblyName>
@@ -9,7 +9,7 @@
   <PropertyGroup>
     <PackageId>Umbrella.TypeScript.Tools</PackageId>
     <PackageType>DotnetCliTool</PackageType>
-    <Version>1.0.0-rel-build00352</Version>
+    <Version>1.0.0-rel-build00353</Version>
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
     <Copyright>Zinofi Digital Ltd 2017</Copyright>
