--- a/Test/Umbrella.DynamicImage.SoundInTheory.Test/Umbrella.DynamicImage.SoundInTheory.Test.csproj
+++ b/Test/Umbrella.DynamicImage.SoundInTheory.Test/Umbrella.DynamicImage.SoundInTheory.Test.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>    
-    <TargetFramework>net462</TargetFramework>
+    <TargetFramework>net47</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
