--- a/Logging/src/Umbrella.Extensions.Logging.Log4Net.Azure/Umbrella.Extensions.Logging.Log4Net.Azure.csproj
+++ b/Logging/src/Umbrella.Extensions.Logging.Log4Net.Azure/Umbrella.Extensions.Logging.Log4Net.Azure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net46</TargetFramework>
@@ -19,7 +19,7 @@
 
   <ItemGroup>
     <PackageReference Include="log4net" Version="2.0.8" />
-    <PackageReference Include="WindowsAzure.Storage" Version="8.1.4" />
+    <PackageReference Include="WindowsAzure.Storage" Version="8.3.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="1.1.2" />
   </ItemGroup>
 
