--- a/DynamicImage/src/Umbrella.DynamicImage.Abstractions/Umbrella.DynamicImage.Abstractions.csproj
+++ b/DynamicImage/src/Umbrella.DynamicImage.Abstractions/Umbrella.DynamicImage.Abstractions.csproj
@@ -1,11 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard1.3</TargetFramework>
   </PropertyGroup>
 
   <PropertyGroup>
-    <Version>1.0.0-rel-build00360</Version>
+    <Version>1.0.0-rel-build00361</Version>
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
     <Copyright>Zinofi Digital Ltd ? 2017</Copyright>
