--- a/Core/src/Umbrella.WebUtilities.ModelState/Umbrella.WebUtilities.ModelState.csproj
+++ b/Core/src/Umbrella.WebUtilities.ModelState/Umbrella.WebUtilities.ModelState.csproj
@@ -12,4 +12,12 @@
     <Copyright>Zinofi Digital Ltd 2017</Copyright>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
+
 </Project>
