--- a/DynamicImage/benchmark/Umbrella.DynamicImage.Benchmark/Umbrella.DynamicImage.Benchmark.csproj
+++ b/DynamicImage/benchmark/Umbrella.DynamicImage.Benchmark/Umbrella.DynamicImage.Benchmark.csproj
@@ -10,6 +10,14 @@
     <DefineConstants>TRACE;NETCOREAPP1_1</DefineConstants>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netcoreapp1.1|AnyCPU'">
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|netcoreapp1.1|AnyCPU'">
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
+
   <ItemGroup>
     <Compile Remove="BenchmarkDotNet.Artifacts\**" />
     <EmbeddedResource Remove="BenchmarkDotNet.Artifacts\**" />
