--- a/Core/src/Umbrella.Utilities.Caching/Umbrella.Utilities.Caching.csproj
+++ b/Core/src/Umbrella.Utilities.Caching/Umbrella.Utilities.Caching.csproj
@@ -12,6 +12,14 @@
     <Copyright>Zinofi Digital Ltd 2017</Copyright>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="1.1.2" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
