--- a/DataAccess/src/Umbrella.DataAccess.EF6/Umbrella.DataAccess.EF6.csproj
+++ b/DataAccess/src/Umbrella.DataAccess.EF6/Umbrella.DataAccess.EF6.csproj
@@ -12,6 +12,14 @@
     <Copyright>Zinofi Digital Ltd ? 2017</Copyright>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="EntityFramework" Version="6.1.3" />
   </ItemGroup>
