--- a/DataAccess/src/Umbrella.DataAccess.EntityFrameworkCore/Umbrella.DataAccess.EntityFrameworkCore.csproj
+++ b/DataAccess/src/Umbrella.DataAccess.EntityFrameworkCore/Umbrella.DataAccess.EntityFrameworkCore.csproj
@@ -13,6 +13,14 @@
     <Description>This package is a placeholder for a future EF Core port of the Umbrella.DataAccess.EF6 package.</Description>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="1.1.2" />
   </ItemGroup>
