--- a/DataAccess/src/Umbrella.DataAccess.MultiTenant.EF6/Umbrella.DataAccess.MultiTenant.EF6.csproj
+++ b/DataAccess/src/Umbrella.DataAccess.MultiTenant.EF6/Umbrella.DataAccess.MultiTenant.EF6.csproj
@@ -9,7 +9,15 @@
     <Version>1.0.0-rel-build00361</Version>
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
-    <Copyright>Zinofi Digital Ltd © 2017</Copyright>
+    <Copyright>Zinofi Digital Ltd ï¿½ 2017</Copyright>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
