--- a/DataAccess/src/Umbrella.DataAccess.MultiTenant/Umbrella.DataAccess.MultiTenant.csproj
+++ b/DataAccess/src/Umbrella.DataAccess.MultiTenant/Umbrella.DataAccess.MultiTenant.csproj
@@ -12,6 +12,14 @@
     <Copyright>Zinofi Digital Ltd ? 2017</Copyright>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="1.1.1" />
   </ItemGroup>
