--- a/Test/Umbrella.DynamicImage.SoundInTheory.Test/Umbrella.DynamicImage.SoundInTheory.Test.csproj
+++ b/Test/Umbrella.DynamicImage.SoundInTheory.Test/Umbrella.DynamicImage.SoundInTheory.Test.csproj
@@ -4,6 +4,14 @@
     <TargetFramework>net47</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
     <PackageReference Include="xunit" Version="2.2.0" />
