--- a/DynamicImage/test/Umbrella.DynamicImage.Impl.Test/Umbrella.DynamicImage.Impl.Test.csproj
+++ b/DynamicImage/test/Umbrella.DynamicImage.Impl.Test/Umbrella.DynamicImage.Impl.Test.csproj
@@ -15,6 +15,8 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Umbrella.DynamicImage.SoundInTheory\Umbrella.DynamicImage.SoundInTheory.csproj" />
     <ProjectReference Include="..\..\Core\Umbrella.DynamicImage\Umbrella.DynamicImage.csproj" />
+    <ProjectReference Include="..\..\DynamicImage\src\Umbrella.DynamicImage.FreeImage\Umbrella.DynamicImage.FreeImage.csproj" />
+    <ProjectReference Include="..\..\DynamicImage\src\Umbrella.DynamicImage.SkiaSharp\Umbrella.DynamicImage.SkiaSharp.csproj" />
   </ItemGroup>
 
   <ItemGroup>
