--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ project.lock.json
 Logs
 BenchmarkDotNet.Artifacts
 /Test/Umbrella.DynamicImage.SoundInTheory.Test/Output
+/Test/Umbrella.DynamicImage.Impl.Test/Output
