Reverted the reference to the data annotations assembly back to the framework

--- a/Unity/src/Umbrella.Unity/Umbrella.Unity.csproj
+++ b/Unity/src/Umbrella.Unity/Umbrella.Unity.csproj
@@ -18,13 +18,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="UnityEngine">
       <HintPath>..\UnityAssemblies\UnityEngine.dll</HintPath>
     </Reference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="System.ComponentModel.Annotations" Version="4.4.0" />
   </ItemGroup>
 
 </Project>
