Cleaned up some code Added unit tests for the ModelStateTransformer Added caching to tag helpers and the model state transformer Added a new options class for the ModelStateTransformer to allow keys to be output either unaltered or in camelcase.

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ Logs
 BenchmarkDotNet.Artifacts
 /Test/Umbrella.DynamicImage.SoundInTheory.Test/Output
 /Test/Umbrella.DynamicImage.Impl.Test/Output
+/coverage
