--- a/DynamicImage/src/Umbrella.DynamicImage.SoundInTheory/Umbrella.DynamicImage.SoundInTheory.csproj
+++ b/DynamicImage/src/Umbrella.DynamicImage.SoundInTheory/Umbrella.DynamicImage.SoundInTheory.csproj
@@ -10,6 +10,12 @@
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
     <Copyright>Zinofi Digital Ltd 2017</Copyright>
+    <Description>
+      <Description>
+        This package contains an implementation of the IDynamicImageResizer built using the DynamicImage library.
+        The repo for this library can be found on github: https://github.com/tgjones/dynamic-image.
+      </Description>
+    </Description>
   </PropertyGroup>
 
   <ItemGroup>
