--- a/Legacy/src/Umbrella.Legacy.WebUtilities/Umbrella.Legacy.WebUtilities.csproj
+++ b/Legacy/src/Umbrella.Legacy.WebUtilities/Umbrella.Legacy.WebUtilities.csproj
@@ -11,6 +11,9 @@
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
     <Copyright>Zinofi Digital Ltd 2017</Copyright>
+    <Description>
+      This package contains a range of utility classes to aid web application development using the legacy ASP.NET stack.
+    </Description>
   </PropertyGroup>
 
   <ItemGroup>
