--- a/Core/src/Umbrella.ActiveDirectory/Umbrella.ActiveDirectory.csproj
+++ b/Core/src/Umbrella.ActiveDirectory/Umbrella.ActiveDirectory.csproj
@@ -11,6 +11,10 @@
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
     <Copyright>Zinofi Digital Ltd 2017</Copyright>
+    <Description>
+      This package is used to retrieve authentication tokens from Azure Active Directory using either
+      client credentials or a client certificate. The tokens can then be used to access certain Azure services.
+    </Description>
   </PropertyGroup>
 
   <ItemGroup>
