--- a/DynamicImage/src/Umbrella.DynamicImage.SkiaSharp/Umbrella.DynamicImage.SkiaSharp.csproj
+++ b/DynamicImage/src/Umbrella.DynamicImage.SkiaSharp/Umbrella.DynamicImage.SkiaSharp.csproj
@@ -10,6 +10,10 @@
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
     <Copyright>Zinofi Digital Ltd 2017</Copyright>
+    <Description>
+      This package contains an implementation of the IDynamicImageResizer built using the SkiaSharp library.
+      The repo for this library can be found on github: https://github.com/mono/SkiaSharp
+    </Description>
   </PropertyGroup>
 
   <ItemGroup>
