--- a/DynamicImage/src/Umbrella.DynamicImage/Umbrella.DynamicImage.csproj
+++ b/DynamicImage/src/Umbrella.DynamicImage/Umbrella.DynamicImage.csproj
@@ -10,6 +10,9 @@
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
     <Copyright>Zinofi Digital Ltd 2017</Copyright>
+    <Description>
+      This package contains come common features shared by other Umbrella.DynamicImage.* packages such as image URL generation and parsing capabilites as well as caching mechanisms for in-memory and physical disk.
+    </Description>
   </PropertyGroup>
 
   <ItemGroup>
