--- a/FileSystem/src/Umbrella.FileSystem.Abstractions/Umbrella.FileSystem.Abstractions.csproj
+++ b/FileSystem/src/Umbrella.FileSystem.Abstractions/Umbrella.FileSystem.Abstractions.csproj
@@ -11,6 +11,10 @@
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
     <Copyright>Zinofi Digital Ltd 2017</Copyright>
+    <Description>
+      This package contains the core abstractions which underpin all other Umbrella.FileSystem.* packages as well as many other of the Umbrella.* packages
+      which access the file system.
+    </Description>
   </PropertyGroup>
 
   <ItemGroup>
