--- a/FileSystem/src/Umbrella.FileSystem.Disk/Umbrella.FileSystem.Disk.csproj
+++ b/FileSystem/src/Umbrella.FileSystem.Disk/Umbrella.FileSystem.Disk.csproj
@@ -11,6 +11,9 @@
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
     <Copyright>Zinofi Digital Ltd 2017</Copyright>
+    <Description>
+      This package contains implementations of the Umbrella.FileSystem.Abstractions types using the physical disk as the storage mechanism.
+    </Description>
   </PropertyGroup>
 
   <ItemGroup>
