--- a/Legacy/src/Umbrella.Legacy.Utilities/Umbrella.Legacy.Utilities.csproj
+++ b/Legacy/src/Umbrella.Legacy.Utilities/Umbrella.Legacy.Utilities.csproj
@@ -11,6 +11,9 @@
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
     <Copyright>Zinofi Digital Ltd 2017</Copyright>
+    <Description>
+      This package contains a range of utility classes to aid application development with the legacy .NET stack, i.e. pre .NET Core.
+    </Description>
   </PropertyGroup>
 
   <ItemGroup>
