--- a/Legacy/src/Umbrella.Legacy.WCF/Umbrella.Legacy.WCF.csproj
+++ b/Legacy/src/Umbrella.Legacy.WCF/Umbrella.Legacy.WCF.csproj
@@ -11,6 +11,9 @@
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
     <Copyright>Zinofi Digital Ltd 2017</Copyright>
+    <Description>
+      This package contains classes used to aid WCF project development.
+    </Description>
   </PropertyGroup>
 
   <ItemGroup>
