--- a/Unity/src/Umbrella.Unity/Umbrella.Unity.csproj
+++ b/Unity/src/Umbrella.Unity/Umbrella.Unity.csproj
@@ -11,6 +11,9 @@
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
     <Copyright>Zinofi Digital Ltd 2017</Copyright>
+    <Description>
+      This package contains general utilities and infrastructure code for use with Unity projects.
+    </Description>
   </PropertyGroup>
 
   <ItemGroup>
